加入桌面小部件和主窗口的风、湿度的显示信息

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -34,13 +34,15 @@
                     android:layout_height="wrap_content"
                     android:fitsSystemWindows="true">
 
-                    <include layout="@layout/title"/>
+                    <include layout="@layout/title" />
 
                     <include layout="@layout/now"/>
 
                     <include layout="@layout/forecast"/>
 
                     <include layout="@layout/aqi"/>
+
+                    <include layout="@layout/wind_hyg"/>
 
                     <include layout="@layout/suggestion"/>
 
