--- a/app/src/main/res/animator/windmill_animator.xml
+++ b/app/src/main/res/animator/windmill_animator.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="6000"
-    android:repeatMode="reverse"
+    android:duration="1500"
+    android:repeatCount="infinite"
+    android:repeatMode="restart"
     android:propertyName="rotation"
+    android:valueType="floatType"
     android:valueFrom="0"
     android:valueTo="360">
 </objectAnimator>
