--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -20,14 +20,12 @@
             android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <ScrollView
                 android:id="@+id/weather_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none"
                 android:overScrollMode="never">
-
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -44,17 +42,26 @@
 
                     <include layout="@layout/wind_hyg"/>
 
-                    <include layout="@layout/suggestion"/>
-
                     <include layout="@layout/sun_rise_sun_set"/>
 
+                    <include layout="@layout/suggestion"/>
+
                 </LinearLayout>
-
             </ScrollView>
-
         </android.support.v4.widget.SwipeRefreshLayout>
 
-        <LinearLayout
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="@dimen/navViewWidth"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/nav_menu"
+            app:itemIconTint="@color/colorLightBlue"
+            app:itemTextColor="@color/colorBlack"
+            app:headerLayout="@layout/nav_header">
+        </android.support.design.widget.NavigationView>
+
+        <!--<LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-        </LinearLayout>
+        </LinearLayout>-->
 
     </android.support.v4.widget.DrawerLayout>
 
