--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <dimen name="actionBarSize">50dp</dimen>
+    <dimen name="conditionBarSize">25dp</dimen>
     <dimen name="bowWidth">140dp</dimen>
     <dimen name="aqiBowHeight">80dp</dimen>
+    <dimen name="navViewWidth">280dp</dimen>
 
     <!--
 Refer to App Widget Documentation for margin information
