--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="aqiBowHeight">80dp</dimen>
     <dimen name="navViewWidth">280dp</dimen>
 
+    <dimen name="popupTextViewHeight">45dp</dimen>
+
     <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
